// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot MinMax range match 1`] = `
<div
  className="sc-dlfnbm bdQNGe"
>
  <div
    className="range null"
  >
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
    <div
      className="range__bar"
      onMouseMove={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
    >
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-min"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "14.141414141414142%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-max"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "88.8888888888889%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="range__bar__rail"
      />
    </div>
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
  </div>
</div>
`;

exports[`snapshot Number[] range match 1`] = `
<div
  className="sc-dlfnbm bdQNGe"
>
  <div
    className="range null"
  >
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
    <div
      className="range__bar"
      onMouseMove={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
    >
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-min"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "14.942528735632184%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-max"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "100%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="range__bar__rail"
      />
    </div>
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
  </div>
</div>
`;

exports[`snapshot disabled range match 1`] = `
<div
  className="sc-dlfnbm bdQNGe"
>
  <div
    className="range m-disabled"
  >
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
    <div
      className="range__bar"
      onMouseMove={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
    >
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-min"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "0%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-max"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "100%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="range__bar__rail"
      />
    </div>
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
  </div>
</div>
`;

exports[`snapshot empty range match 1`] = `
<div
  className="sc-dlfnbm bdQNGe"
>
  <div
    className="range null"
  >
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
    <div
      className="range__bar"
      onMouseMove={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
    >
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-min"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "0%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="sc-gsTCUz vaZaG range__bar__control m-max"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "left": "100%",
            "zIndex": 0,
          }
        }
      />
      <div
        className="range__bar__rail"
      />
    </div>
    <div
      className="sc-bdfBwQ jldiZV"
    >
      <input
        className="span-input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "1ch",
          }
        }
        type="number"
        value="0"
      />
      <span />
    </div>
  </div>
</div>
`;
